fix mobile double scroll

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,11 +3,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position:relative;
-  top: 0;
   background-color: var(--card-color);
   height: 10%;
 
+}
+
+.parent{
+  width: 100vw; height: 100vh; overflow:auto;
 }
 
 .logo{
@@ -60,7 +62,9 @@
       .cards-container{
         width: 100vw;
       }
-      
+      .parent{
+        height: fit-content;
+      }
 }
 
 @media screen and (max-width: 35em
