--- a/src/app/components/account-settings/account-settings.component.css
+++ b/src/app/components/account-settings/account-settings.component.css
@@ -107,7 +107,7 @@ cursor: pointer;
 @media screen and (max-width: 35em
 ) {
   .height{
-    height: 85%;
+    height: fit-content;
   }
   .logo {
       display: none; /* Adjusted width for smaller resolutions */
